# Project_mgt_web

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/: AGENTS.md  ai.py  ai_types.py  auth.py  chat_store.py  database.py  entrypoint.sh  kanban_api.py  main.py  pyproject.toml
backend/data/: kanban.db
backend/static/: __next.__PAGE__.txt  __next._head.txt  __next._tree.txt  index.html  index.txt
backend/static/404/: index.html
backend/static/_next/static/chunks/: 15a52fa032423354.js  35f8af26d399137b.js  a6b5ce18e8f88cb8.css  c6d112bcb75cf8c4.css  cf12ff46c9b08358.js
backend/static/_not-found/: __next._head.txt  __next._index.txt  __next._tree.txt  index.html  index.txt
backend/static/_not-found/__next._not-found/: __PAGE__.txt
backend/static/login/: __next._full.txt  __next._index.txt  __next._tree.txt  __next.login.txt  index.html  index.txt
backend/static/login/__next.login/: __PAGE__.txt
backend/tests/: conftest.py  test_ai.py  test_auth.py  test_chat_api.py  test_health.py  test_kanban.py  test_static.py
data/: kanban.db
docs/: DATABASE.md  PLAN.md  code_review.md
frontend/: AGENTS.md  playwright.config.ts  vitest.config.ts
frontend/src/app/: page.tsx
frontend/src/components/: AIChatSidebar.test.tsx  AIChatSidebar.tsx  ErrorBoundary.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.test.tsx  KanbanCard.tsx  KanbanCardPreview.test.tsx  KanbanColumn.test.tsx  (+3 more)
frontend/tests/: kanban.spec.ts
scripts/: AGENTS.md  start.bat  start.sh
(+8 files in other folders)
